# cardano-wallet

./: bench-restore  cabal.project  flake.nix  fourmolu.yaml
.buildkite/: artifacts-e2e-windows.yml  artifacts-e2e-x86_64-linux.yml  pipeline.yml  pre-merge.yml
.github/workflows/: e2e-linux.yml  e2e-windows.yml  nix-test.yml  openapi.yml  style.yml
2022-07/hydra/: eval-1253715.json  eval-1254070.json  eval-1254315.json  eval-1254501.json  eval-1255067.json  eval-1255188.json  eval-1256096.json  eval-1256106.json  eval-1256152.json  eval-1256166.json  eval-1256456.json  eval-1256585.json  eval-1257277.json  eval-1257290.json  eval-1257315.json  eval-1257342.json  eval-1257669.json  eval-1258506.json  eval-1258533.json  eval-1258627.json  eval-1258917.json  eval-1259054.json  eval-1259278.json  eval-1259382.json  eval-1259421.json  eval-1259868.json  eval-1260033.json
2022-08/hydra/: eval-1260938.json  eval-1261019.json  eval-1261620.json  eval-1261652.json  eval-1262080.json  eval-1262167.json  eval-1262608.json  eval-1263806.json  eval-1263871.json  eval-1263916.json  eval-1264265.json  eval-1264307.json  eval-1264632.json  eval-1265078.json  eval-1267158.json  eval-1267160.json  (+25 more)
nix/: cabal-shell.nix  haskell.nix  project-package-list.nix  tullia.nix
prototypes/apache-thrift-api/: .envrc  apache-thrift-api.cabal  flake.nix  index.js  index.ts  package-lock.json  package.json  tsconfig.json  wallet.thrift
prototypes/apache-thrift-api/scripts/: gen
prototypes/apache-thrift-api/src/ts/: Network.d.ts  Network.js  wallet_types.d.ts  wallet_types.js
(+614 files in other folders)
