cabal-version:      2.4
name:               apache-thrift-api
version:            0.1.0.0
synopsis:           Explore feasability of the Apache Thrift
description:
    This prototype explores whether we can implement an
    API layer for cardano-wallet based on the Apache Thrift framework.

bug-reports:        https://github.com/input-output-hk/cardano-wallet
author:             IOHK Engineering Team
maintainer:         operations@iohk.io
copyright:          2021-2022 IOHK
license:            Apache-2.0
category:           Cardano

extra-source-files:
  README.md

library
    default-language:
      Haskell2010
    default-extensions:
      OverloadedStrings
    build-depends:
      , base ^>=4.14.3.0
      , pinch ^>=0.4.1.2
      , cardano-wallet
    exposed-modules:
      Server
    other-modules:
    hs-source-dirs:
      src/hs
